@@ -1,36 +1,51 @@
 package com.provectus.kafka.ui.base;
 
 import com.codeborne.selenide.Configuration;
+import com.codeborne.selenide.WebDriverRunner;
 import com.codeborne.selenide.logevents.SelenideLogger;
 import com.provectus.kafka.ui.helpers.Helpers;
+import com.provectus.kafka.ui.helpers.TestConfiguration;
 import com.provectus.kafka.ui.pages.Pages;
 import com.provectus.kafka.ui.screenshots.Screenshooter;
-import com.provectus.kafka.ui.steps.Steps;
+import com.provectus.kafka.ui.utils.CamelCaseToSpacedDisplayNameGenerator;
+import com.provectus.kafka.ui.utils.qaseIO.TestCaseGenerator;
 import io.github.cdimascio.dotenv.Dotenv;
+import io.qameta.allure.Allure;
 import io.qameta.allure.selenide.AllureSelenide;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.util.Arrays;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayNameGeneration;
-import org.openqa.selenium.remote.DesiredCapabilities;
-import org.testcontainers.containers.BindMode;
-import org.testcontainers.containers.GenericContainer;
+import org.openqa.selenium.Dimension;
+import org.openqa.selenium.OutputType;
+import org.openqa.selenium.TakesScreenshot;
+import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.remote.RemoteWebDriver;
+import org.testcontainers.Testcontainers;
+import org.testcontainers.containers.BrowserWebDriverContainer;
+import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.utility.DockerImageName;
-
-import java.io.File;
-import java.io.IOException;
-import java.util.Arrays;
 
 @Slf4j
 @DisplayNameGeneration(CamelCaseToSpacedDisplayNameGenerator.class)
 public class BaseTest {
 
-  protected Steps steps = Steps.INSTANCE;
+  public static final String SELENIUM_IMAGE_NAME = "selenium/standalone-chrome";
+  public static final String SELENIARM_STANDALONE_CHROMIUM = "seleniarm/standalone-chromium";
   protected Pages pages = Pages.INSTANCE;
   protected Helpers helpers = Helpers.INSTANCE;
 
   private Screenshooter screenshooter = new Screenshooter();
+
+  protected static BrowserWebDriverContainer<?> webDriverContainer = null;
 
   public void compareScreenshots(String name) {
     screenshooter.compareScreenshots(name);
@@ -40,16 +55,45 @@ public class BaseTest {
     screenshooter.compareScreenshots(name, shouldUpdateScreenshots);
   }
 
-  public static GenericContainer selenoid =
-      new GenericContainer(DockerImageName.parse("aerokube/selenoid:latest-release"))
-          .withExposedPorts(4444)
-          .withFileSystemBind("selenoid/config/", "/etc/selenoid", BindMode.READ_WRITE)
-          .withFileSystemBind("/var/run/docker.sock", "/var/run/docker.sock", BindMode.READ_WRITE)
-          .withFileSystemBind("selenoid/video", "/opt/selenoid/video", BindMode.READ_WRITE)
-          .withFileSystemBind("selenoid/logs", "/opt/selenoid/logs", BindMode.READ_WRITE)
-          .withEnv("OVERRIDE_VIDEO_OUTPUT_DIR", "/opt/selenoid/video")
-          .withCommand(
-              "-conf", "/etc/selenoid/browsers.json", "-log-output-dir", "/opt/selenoid/logs");
+  @BeforeEach
+  public void setWebDriver() {
+    RemoteWebDriver remoteWebDriver = webDriverContainer.getWebDriver();
+    WebDriverRunner.setWebDriver(remoteWebDriver);
+    remoteWebDriver.manage().window().setSize(new Dimension(1440, 1024));
+  }
+
+  @BeforeAll
+  public static void start() {
+
+    DockerImageName image = isARM64()
+        ? DockerImageName.parse(SELENIARM_STANDALONE_CHROMIUM).asCompatibleSubstituteFor(SELENIUM_IMAGE_NAME)
+        : DockerImageName.parse(SELENIUM_IMAGE_NAME);
+    log.info("Using [{}] as image name for chrome", image.getUnversionedPart());
+
+    webDriverContainer = new BrowserWebDriverContainer<>(image)
+        .withEnv("JAVA_OPTS", "-Dwebdriver.chrome.whitelistedIps=")
+        .withCapabilities(new ChromeOptions()
+            .addArguments("--disable-dev-shm-usage")
+            .addArguments("--verbose")
+        )
+        .waitingFor(Wait.forHttp("/"))
+        //.withLogConsumer(new Slf4jLogConsumer(log).withPrefix("[CHROME]: ")) // uncomment for debugging
+        .waitingFor(Wait.forLogMessage(".*Started Selenium Standalone.*", 1));
+    try {
+      Testcontainers.exposeHostPorts(8080);
+      webDriverContainer.start();
+    } catch (Throwable e) {
+      log.error("Couldn't start a container", e);
+    }
+  }
+
+  @AfterAll
+  public static void tearDown() {
+    if (webDriverContainer.isRunning()) {
+      webDriverContainer.close();
+      webDriverContainer.stop();
+    }
+  }
 
   static {
     if (!new File("./.env").exists()) {
@@ -64,55 +108,51 @@ public class BaseTest {
     if (TestConfiguration.CLEAR_REPORTS_DIR) {
       clearReports();
     }
-    setupSelenoid();
+    setup();
+    Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+      if (TestCaseGenerator.FAILED) {
+        log.error(
+            "Tests FAILED because some problem with @CaseId annotation. Verify that all tests annotated with @CaseId and Id is correct!");
+        Runtime.getRuntime().halt(100500);
+      }
+    }));
   }
 
-  @AfterAll
-  public static void afterAll() {
-//    closeWebDriver();
-//    selenoid.close();
+  @AfterEach
+  public void afterMethod() {
+    Allure.addAttachment("Screenshot",
+        new ByteArrayInputStream(
+            ((TakesScreenshot) webDriverContainer.getWebDriver()).getScreenshotAs(OutputType.BYTES)));
   }
 
   @SneakyThrows
-  private static void setupSelenoid() {
-    String remote = TestConfiguration.SELENOID_URL;
-    if (TestConfiguration.SHOULD_START_SELENOID) {
-      selenoid.start();
-      remote =
-          "http://%s:%s/wd/hub"
-              .formatted(selenoid.getContainerIpAddress(), selenoid.getMappedPort(4444));
-    }
-
+  private static void setup() {
     Configuration.reportsFolder = TestConfiguration.REPORTS_FOLDER;
-    if (!TestConfiguration.USE_LOCAL_BROWSER) {
-      Configuration.remote = remote;
-      TestConfiguration.BASE_URL =
-          TestConfiguration.BASE_URL.replace("localhost", "host.docker.internal");
-    }
     Configuration.screenshots = TestConfiguration.SCREENSHOTS;
     Configuration.savePageSource = TestConfiguration.SAVE_PAGE_SOURCE;
     Configuration.reopenBrowserOnFail = TestConfiguration.REOPEN_BROWSER_ON_FAIL;
     Configuration.browser = TestConfiguration.BROWSER;
-    Configuration.baseUrl = TestConfiguration.BASE_URL;
+    Configuration.baseUrl = TestConfiguration.BASE_WEB_URL;
+    Configuration.timeout = 10000;
     Configuration.browserSize = TestConfiguration.BROWSER_SIZE;
-    var capabilities = new DesiredCapabilities();
-//    DesiredCapabilities capabilities = DesiredCapabilities.chrome();
-    capabilities.setCapability("enableVNC", TestConfiguration.ENABLE_VNC);
-    Configuration.browserCapabilities = capabilities;
-
     SelenideLogger.addListener("allure", new AllureSelenide().savePageSource(false));
   }
 
   public static void clearReports() {
-    log.info("Clearing reports dir [%s]...".formatted(TestConfiguration.REPORTS_FOLDER));
+    log.info(String.format("Clearing reports dir [%s]...", TestConfiguration.REPORTS_FOLDER));
     File allureResults = new File(TestConfiguration.REPORTS_FOLDER);
     if (allureResults.isDirectory()) {
       File[] list = allureResults.listFiles();
-      if (list != null)
+      if (list != null) {
         Arrays.stream(list)
             .sequential()
             .filter(e -> !e.getName().equals("categories.json"))
             .forEach(File::delete);
+      }
     }
+  }
+
+  private static boolean isARM64() {
+    return System.getProperty("os.arch").equals("aarch64");
   }
 }
